--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/sps?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3306/sps?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
 jdbc.username=root
 jdbc.password=12345678
